NBNP-280 Fix Back to Results link icon alignment

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -484,7 +484,6 @@ a.back-link::before {
   display: inline-block;
   font-weight: 900;
   margin-right: 0.25em;
-  vertical-align: text-bottom;
 }
 
 /* Holdings */
